# agent-markitdown

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TASKS.md  project-context.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  publishing.md  release-checklist.md
integrations/claude-code/: AGENTS.md
integrations/codex/: AGENTS.md
integrations/hermes-agent/: SKILL.md
integrations/openclaw/: SKILL.md
scripts/: install-openclaw-skill.sh
src/agent_markitdown/: __init__.py  cli.py  converter.py
tests/: test_cli.py
